# solomd

./: .gitignore  LICENSE  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt.md  README.sv.md  README.tr.md  README.uk.md  README.zh.md  smithery.yaml
.github/workflows/: indexnow.yml  mirror-gitee.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  test-self.mjs  test-slash-blocks.mjs  tsconfig.json
app-store/: README.md  SUBMISSION_GUIDE.md
app-store/ios/: DESCRIPTION_de.md  DESCRIPTION_en.md  DESCRIPTION_es.md  DESCRIPTION_fr.md  DESCRIPTION_it.md  DESCRIPTION_ja.md  DESCRIPTION_ko.md  DESCRIPTION_nl.md  DESCRIPTION_pl.md  DESCRIPTION_pt.md  DESCRIPTION_sv.md  DESCRIPTION_tr.md  DESCRIPTION_uk.md  DESCRIPTION_zh.md  KEYWORDS_de.md  KEYWORDS_es.md  KEYWORDS_fr.md  KEYWORDS_it.md  KEYWORDS_ja.md  KEYWORDS_ko.md  KEYWORDS_nl.md  KEYWORDS_pl.md  KEYWORDS_pt.md  KEYWORDS_sv.md  KEYWORDS_tr.md  KEYWORDS_uk.md  METADATA.md  PRIVACY.md  PROMOTIONAL_TEXT_de.md  PROMOTIONAL_TEXT_en.md  PROMOTIONAL_TEXT_es.md  PROMOTIONAL_TEXT_fr.md  PROMOTIONAL_TEXT_it.md  PROMOTIONAL_TEXT_ja.md  PROMOTIONAL_TEXT_ko.md  PROMOTIONAL_TEXT_nl.md  PROMOTIONAL_TEXT_pl.md  PROMOTIONAL_TEXT_pt.md  PROMOTIONAL_TEXT_sv.md  PROMOTIONAL_TEXT_tr.md  (+28 more)
app-store/macos/: DESCRIPTION_en.md  DESCRIPTION_zh.md  KEYWORDS_en.md  KEYWORDS_zh.md  MAS_BUILD_NOTES.md  METADATA.md  PRIVACY.md  PROMOTIONAL_TEXT_en.md  PROMOTIONAL_TEXT_zh.md  REVIEW_NOTES.md  SUBTITLE_zh.md  WHATS_NEW_en.md  WHATS_NEW_zh.md
app/scripts/: solomd-export.mjs
app/src/: App.vue  main.ts  types.ts
app/src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  build.rs  entitlements.mas-sidecar.plist  entitlements.mas.plist  installer.nsh  tauri.conf.json  tauri.ios.conf.json
app/src-tauri/binaries/: .gitignore  README.md  solomd-mcp-aarch64-apple-darwin  solomd-mcp-universal-apple-darwin  solomd-mcp-x86_64-apple-darwin
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/cookbook/: 08-daily-summary.yml  10-on-commit-changelog.yml
app/src-tauri/examples/: autogit_drive.rs  capture_drive.rs
app/src-tauri/icons/: file_icon.icns  icon.icns
app/src-tauri/sample-recipes/: README.md  _sample-weekly-review.yml.example
app/src-tauri/src/: agent_run.rs  agent_tools.rs  agent_trace.rs  ai_keystore.rs  ai_proxy.rs  app_build.rs  capture_endpoint.rs  cjk_proofread.rs  cloud_folder.rs  commands.rs  convert.rs  cookbook.rs  cost_meter.rs  crypto.rs  dev_bridge.rs  git_history.rs  github_sync.rs  image_upload.rs  integrations.rs  lib.rs  main.rs  mcp_profiles.rs  ollama.rs  pandoc.rs  pricing.rs  rag.rs  recipe_runner.rs  recipes.rs  rest_api.rs  runner.rs  saf_android.rs  search.rs  set_default.rs  spellcheck.rs  storage_android.rs  themes.rs  trace.rs  watcher.rs  workspace_index.rs
app/src-tauri/tests/: agent_tools_e2e_test.rs  agent_trace_e2e_test.rs  capture_e2e_test.rs  cjk_proofread_test.rs  copy_file_test.rs  frontmatter_edit_test.rs  git_history_e2e_test.rs  github_sync_branch_test.rs  github_sync_e2e_test.rs  github_sync_e2ee_test.rs  rag_e2e_test.rs  read_file_test.rs  recipes_e2e_test.rs  search_test.rs
app/src-tauri/tests/fixtures/trace_sample/: trace.jsonl
aur-solomd-bin/: .SRCINFO  PKGBUILD  solomd.desktop
brand/: BRAND.md  gen_logo.sh  gen_logo_b.sh  gen_logo_hashmd.sh  gen_logo_refine.sh  og-template.html
dev-mcp/: Cargo.toml  README.md
dev-mcp/src/: main.rs  tools.rs
distribution/: DISTRIBUTION-PLAN.md  QUICK-START.md
distribution/submissions/: alternativeto.md  appinn.md  sourceforge.md
docs/: MARKETING.md  agents.md  github-stats-pattern.md  live-preview-block-test.md  markdown-support-test.md  roadmap.md  v2.0-plan.md  v4.6-plan.md  v4.6.1-plan.md
docs/webview2-ime-report/: REPORT.md  repro.html
fdroid/metadata/: app.solomd.yml
ios-shortcuts/: README.md
marketing/: BIO.md
marketing-zh/: DEV-STORY.md  PM-WITH-CLAUDE-CODE.md
marketing-zh/appinn/: SUBMISSION.md
marketing-zh/jike/: POSTS.md
marketing-zh/juejin/: ARTICLE.md
marketing-zh/sspai/: ARTICLE.md
marketing-zh/v2ex/: POST.md
marketing-zh/weibo-xiaohongshu/: POSTS.md
marketing-zh/zhihu/: ANSWERS.md
marketing/dev-to/: ARTICLE.md
marketing/github-awesome/: PR-TEMPLATES.md
marketing/hacker-news/: POST.md
marketing/product-hunt/: LAUNCH.md
marketing/reddit/: POSTS.md
marketing/twitter/: TWEETS.md
marketplace/: README.md
marketplace/_shared/: about-solomd.md  badges.md  tools.md
marketplace/awesome-mcp/: README.md  entry-appcypher.md  entry-punkpeye.md  entry-wong2.md  pr-body.md
marketplace/claude-code-skill/: README.md
marketplace/client-docs/: README.md  claude-code.md  claude-desktop.md  cline.md  continue.md  cursor.md  zed.md
marketplace/mcp-servers/: README.md  entry.md  pr-body.md
marketplace/smithery/: Dockerfile  README.md  listing.md
mcp-server/: Cargo.toml  README.md  build.rs
mcp-server/src/: main.rs  safety.rs  tools.rs  trace_reader.rs  workspace.rs
mcp-server/tests/: export_test.rs  multi_workspace.rs
scripts/: README.md  build-android.sh  build-ios.sh  build-mac.sh  build-mas.sh  build-mcp-sidecar.ps1  build-mcp-sidecar.sh  build-skill-pack.sh  gen-mac-icon.sh  install-cli.sh  install-mcp.sh  publish-mcp-crate.sh  publish-packages.sh  release-to-gitee.sh  release.sh  solomd  solomd-settings.sh  submit-ios.sh  submit-mas.sh  v25-slash-self-test.mjs  v4-self-test.sh  v4-ui-smoke.mjs  v4-verify-dmg.sh
scripts/dev/: editor-smoke.ps1
web/: .gitignore  ANALYTICS.md  COMMUNITY-SETUP.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.toml
web-clipper/: .gitignore  README.md  manifest.chrome.json  manifest.firefox.json  package.json  pnpm-lock.yaml  tsconfig.json
web-clipper/scripts/: build-live-driver.mjs  build.mjs  make-icons.mjs  smoke-test.sh  test-markdown.mjs
web-clipper/src/: background.ts  content.ts  options.html  options.ts  popup.css  popup.html  popup.ts
web-clipper/test/: live-driver-entry.ts
web/migrations/: 0001_init_events.sql  0002_stats_cache.sql
(+429 files in other folders)
