[package]
name = "solomd-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for SoloMD vaults — exposes a Markdown notes folder to Claude Code, Codex CLI, and other MCP clients"
license = "MIT"
repository = "https://github.com/zhitongblog/solomd"
readme = "README.md"

[[bin]]
name = "solomd-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK — current 1.x line. server + macros + stdio transport.
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs", "process", "signal"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"

# Markdown / text scanning
walkdir = "2"
regex-lite = "0.1"
once_cell = "1"

# v3.1 — git access for autogit_log/diff/rollback. Vendored libgit2 +
# OpenSSL so the binary is self-contained on every platform (no system
# git required, matching the desktop app's policy).
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Logging (to stderr)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
