[package]
name = "solomd-mcp"
version = "0.4.1"
edition = "2021"
description = "Model Context Protocol server for SoloMD vaults — exposes a Markdown notes folder to Claude Code, Codex CLI, Cursor, Cline, Continue, Zed, and any other MCP client"
license = "MIT"
repository = "https://github.com/zhitongblog/solomd"
homepage = "https://solomd.app"
documentation = "https://github.com/zhitongblog/solomd/blob/main/docs/agents.md"
readme = "README.md"
keywords = ["mcp", "markdown", "agent", "note-taking", "knowledge-base"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Alex Li <lixd220@gmail.com>"]

[[bin]]
name = "solomd-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK — current 1.x line. server + macros + stdio transport.
# v4.5: also `server-side-http` so we can offer a Streamable HTTP transport
# alongside stdio. Stdio stays the default; HTTP is opt-in via --transport
# http for hosted clients (Smithery, Claude.ai remote MCP, ChatGPT custom
# connectors, Cloudflare AI Gateway) that can't shell out to a binary.
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "transport-io",
    "server-side-http",
    "transport-streamable-http-server",
] }

# axum hosts the StreamableHttpService tower::Service over a real HTTP
# server. Picked over plain hyper because the Bearer-token middleware is
# trivial as an axum middleware fn.
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
    "tower-log",
] }
tower = "0.5"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs", "process", "signal"] }

# CLI parsing — `env` feature lets us read SOLOMD_MCP_TOKEN out of the
# environment for the HTTP transport's bearer-token gate.
clap = { version = "4", features = ["derive", "env"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"

# Markdown / text scanning
walkdir = "2"
regex-lite = "0.1"
once_cell = "1"

# v3.1 — git access for autogit_log/diff/rollback. Vendored libgit2 +
# OpenSSL so the binary is self-contained on every platform (no system
# git required, matching the desktop app's policy).
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Logging (to stderr)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[dev-dependencies]
# v4.1 — used by tests/export_test.rs to crack the .docx (a ZIP) and
# inspect word/document.xml without shelling out to `unzip` (which
# isn't available everywhere CI runs).
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
