[package]
name = "solomd"
version = "1.3.1"
description = "SoloMD — a lightweight, cross-platform Markdown + plain text editor"
authors = ["zhitong"]
edition = "2021"
# Disable auto-discovery of bins so Cargo only produces the explicit
# [[bin]] "SoloMD" below (instead of also building an implicit "solomd"
# binary from src/main.rs + package.name).
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Force the binary name to "SoloMD" so it matches tauri.conf.json's
# `mainBinaryName`. Without this, Cargo would produce `solomd.exe` (lowercase
# from [package].name) while Tauri's NSIS template was creating shortcuts
# pointing to a different name, causing the Windows shortcut to break.
[[bin]]
name = "SoloMD"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "1.0.0"
encoding_rs = "0.8.35"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.2"
walkdir = "2.5.0"
# Aptabase + tokio: aptabase's plugin setup calls `tokio::spawn`, which
# needs an ambient tokio runtime. Tauri 2 brings tokio transitively but
# the runtime isn't always entered at plugin-setup time on Windows
# (this is the root cause of the v1.1.2 Windows launch crash —
# aptabase/tauri-plugin-aptabase#16). We explicitly enter a tokio
# runtime in main() before calling tauri::Builder::run().
tauri-plugin-aptabase = "1.0.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

# File-to-Markdown conversion (built-in, no Python needed)
htmd = "0.5"
zip = "2"
quick-xml = "0.37"
calamine = "0.26"
csv = "1.3"
regex-lite = "0.1"             # Lightweight regex for HTML tag stripping
pdf-extract = "0.7"            # PDF text extraction

# v2.0 workspace index (F1 wikilinks, F3 tags, F6 bases)
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
serde_yaml = "0.9"
sha2 = "0.10"                  # cache key hashing
once_cell = "1"                # global index state

# v2.0 spellcheck (F2): Hunspell wrapped in pure-Rust port
spellbook = "0.3"              # MIT, no GPL deps; ships with English+Latin support

# v2.0 AI rewrite (F4): provider keys in OS keychain + streaming HTTP
keyring = "3"                  # cross-platform credential storage
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"           # for stream consumption in ai_proxy
async-stream = "0.3"           # streaming responses to the frontend

# Platform-specific deps for "Set as default editor" feature.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSUserDefaults"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

