[package]
name = "solomd"
version = "3.0.0"
description = "SoloMD — a lightweight, cross-platform Markdown + plain text editor"
authors = ["zhitong"]
edition = "2021"
# Disable auto-discovery of bins so Cargo only produces the explicit
# [[bin]] "SoloMD" below (instead of also building an implicit "solomd"
# binary from src/main.rs + package.name).
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Force the binary name to "SoloMD" so it matches tauri.conf.json's
# `mainBinaryName`. Without this, Cargo would produce `solomd.exe` (lowercase
# from [package].name) while Tauri's NSIS template was creating shortcuts
# pointing to a different name, causing the Windows shortcut to break.
[[bin]]
name = "SoloMD"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "1.0.0"
encoding_rs = "0.8.35"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.2"
walkdir = "2.5.0"
# Aptabase + tokio: aptabase's plugin setup calls `tokio::spawn`, which
# needs an ambient tokio runtime. Tauri 2 brings tokio transitively but
# the runtime isn't always entered at plugin-setup time on Windows
# (this is the root cause of the v1.1.2 Windows launch crash —
# aptabase/tauri-plugin-aptabase#16). We explicitly enter a tokio
# runtime in main() before calling tauri::Builder::run().
tauri-plugin-aptabase = "1.0.0"
# tokio: rt-multi-thread is needed by aptabase + tauri::async_runtime.
# net/io-util/sync/time/macros are debug-only deps for the dev-bridge
# WebDriver localhost server (gated by `#[cfg(debug_assertions)]`). Cargo
# doesn't have a stable target spec for "debug only", so we just enable
# the features unconditionally — they're tokio's lightweight modules and
# don't add measurable bytes to the release binary, while letting us keep
# the bridge code in a single conditional module rather than juggling a
# whole separate crate.
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

# File-to-Markdown conversion (built-in, no Python needed)
htmd = "0.5"
zip = "2"
quick-xml = "0.37"
calamine = "0.26"
csv = "1.3"
regex-lite = "0.1"             # Lightweight regex for HTML tag stripping
pdf-extract = "0.7"            # PDF text extraction

# v2.0 workspace index (F1 wikilinks, F3 tags, F6 bases)
# + file-change watcher for tab reload
notify = "8"
notify-debouncer-mini = "0.7"
serde_yaml = "0.9"
sha2 = "0.10"                  # cache key hashing
once_cell = "1"                # global index state

# v2.0 spellcheck (F2): Hunspell wrapped in pure-Rust port
spellbook = "0.3"              # MIT, no GPL deps; ships with English+Latin support

# v2.2 AutoGit per-note history: libgit2 bindings for cross-platform
# git access (no shelling out). Uses bundled libgit2 by default so we
# don't depend on a system library.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# v2.0 AI rewrite (F4): provider keys in OS keychain + streaming HTTP
# keyring v3 ships with NO default backend — without these features it
# silently falls back to an in-process mock store, which is why keys
# appeared to "save" but never persisted across sessions and never
# landed in the real OS Keychain. Enable the real backends explicitly.
keyring = { version = "3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
  "crypto-rust",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"           # for stream consumption in ai_proxy
async-stream = "0.3"           # streaming responses to the frontend

# v2.3 RAG / semantic search: vectors stored in a single SQLite file per
# workspace. `bundled` ships libsqlite3 so we don't depend on a system
# library — same invariant as `git2` above.
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# v2.6.3 E2EE: passphrase-derived key (Argon2id) + AEAD (XChaCha20-Poly1305).
# Pure-Rust, RustCrypto project. We never send the passphrase or the key
# anywhere; only ciphertext touches the network.
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# Platform-specific deps for "Set as default editor" feature.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSUserDefaults"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

